Update for Google ADS

--- a/public/data/settings/site-config.json
+++ b/public/data/settings/site-config.json
@@ -1,6 +1,6 @@
 {
   "title": "CalendHub - One Calendar to Rule Them All",
-  "description": "Unify all your calendars, schedule meetings effortlessly, and never miss a moment. The ultimate calendar management platform with AI-powered meeting notes and smart scheduling.",
+  "description": "Unify all your calendars, schedule meetings effortlessly, and never miss a moment. The ultimate calendar management platform with smart booking links and video conferencing integration.",
   "url": "https://calendhub.com",
   "author": "CalendHub Team",
   "authorEmail": "contact@calendhub.com",
