Update Google Analytics ID and integrate GA4 tracking in BaseLayout

--- a/public/data/settings/site-config.json
+++ b/public/data/settings/site-config.json
@@ -38,7 +38,7 @@
     "comments": true,
     "rss": true
   },
-  "gaId": "G-Y7JWGXLW8T",
+  "gaId": "G-D4JP1L2KLS",
   "blogCTA": {
     "enabled": true,
     "title": "Ready to Simplify Your Schedule?",
